added logo icon to head

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -142,6 +142,6 @@ header nav ul li a {
     color: steelblue;
 }
 
-/* @media screen and (max-width: 575px){
-   
+/* @media screen and (max-width: 980){
+
 } */
